--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
     <template id="template">
         <div class="note">
-            <i class="fas fa-times"  role="button" aria-label="delete"></i>
+            <i class="fas fa-solid fa-pen"  role="button" aria-label="edit"></i>
+            <i class="edit fas fa-times"  role="button" aria-label="delete"></i>
             <div class="detail"></div>
         </div>
     </template>
